RESOLVED FIXED282121
WebKitTestRunner should be notified when a site isolated iframe crashes
https://bugs.webkit.org/show_bug.cgi?id=282121
Summary WebKitTestRunner should be notified when a site isolated iframe crashes
Alex Christensen
Reported 2024-10-25 16:13:14 PDT
...
Attachments
Radar WebKit Bug Importer
Comment 1 2024-10-25 16:13:26 PDT
Alex Christensen
Comment 2 2024-10-25 16:14:55 PDT
EWS
Comment 3 2024-10-26 17:32:18 PDT
Committed 285735@main (e0d7af95415b): <https://commits.webkit.org/285735@main> Reviewed commits have been landed. Closing PR #35744 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.