WebKitTestRunner should be notified when a site isolated iframe crashes https://bugs.webkit.org/show_bug.cgi?id=282121 rdar://138668277

Reviewed by Charlie Wolfe.

We have 2 tests that intentionally crash an iframe process to see what it looks like thereafter,
 but most of the time we want to actually know when a process crashes that is not the main frame process.

* LayoutTests/http/tests/site-isolation/iframe-process-termination-after-navigation-completed.html:
* LayoutTests/http/tests/site-isolation/iframe-process-termination.html:
* Source/WebKit/UIProcess/RemotePageProxy.cpp:
(WebKit::RemotePageProxy::processDidTerminate):
* Source/WebKit/UIProcess/RemotePageProxy.h:
* Source/WebKit/UIProcess/WebProcessProxy.cpp:
(WebKit::WebProcessProxy::processDidTerminateOrFailedToLaunch):
* Tools/WebKitTestRunner/TestController.cpp:
(WTR::TestController::networkProcessDidCrash):
(WTR::TestController::serviceWorkerProcessDidCrash):
(WTR::TestController::gpuProcessDidCrash):
(WTR::TestController::webProcessDidTerminate):
* Tools/WebKitTestRunner/TestController.h:
* Tools/WebKitTestRunner/TestOptions.cpp:
(WTR::TestOptions::keyTypeMapping):
* Tools/WebKitTestRunner/TestOptions.h:
(WTR::TestOptions::shouldIgnoreWebProcessTermination const):

Canonical link: https://commits.webkit.org/285735@main